<resources>
    <string name="app_name">Privacy Policy - Dialog</string>
    <string name="testTest">We want to inform you that our app personalizes your advertising experience though specific advertising networks by clicking continue your are agree to the\u0020 </string>
    <string name="Dialog_title">ACCEPT TERMS</string>
    <string name="Brand"> your Brand </string>
    <string name="privacy_policy">\u0020 its <u>Privacy Policy</u></string>
    <string name="accept"><b>continue</b></string>
</resources>
