<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/Dialog_w"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_border"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_stop_1" />

        <TextView
            android:id="@+id/dialogtitletextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dialog_title"
            android:textColor="#382d39"
            android:textSize="@dimen/Dialog_title" />


        <TextView
            android:id="@+id/dialogtextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/testTest"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#53381d"
            android:textSize="@dimen/Dialog_body_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Brand" />

            <TextView
                android:id="@+id/textViewPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="#33b5e5" />
        </LinearLayout>


        <Button
            android:id="@+id/dialogbtn1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dialog_valide_cancel_w"
            android:layout_height="@dimen/dialog_valide_cancel_h"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dialog_border"
            android:text="@string/accept"
            android:textColor="#0000cc" />


    </LinearLayout>

</LinearLayout>