<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_border"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_stop_1" />

        <TextView
            android:id="@+id/dialogtitletextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dialog_title"
            android:textColor="#382d39"
            android:textSize="@dimen/Dialog_title" />

        <TextView
            android:id="@+id/dialogtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/testTest"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#53381d"
            android:textSize="@dimen/Dialog_body_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Brand" />

            <TextView
                android:id="@+id/textViewPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="#33b5e5" />
        </LinearLayout>


        <Button
            android:id="@+id/dialogbtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dialog_valide_cancel_w"
            android:layout_height="@dimen/dialog_valide_cancel_h"
            android:layout_margin="10dp"
            android:background="@drawable/dialog_buttons_border"
            android:text="@string/accept"
            android:textColor="#fff" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>